<resources>
    <string name="app_name">Qwotable</string>
    <string name="welcome_title">Welcome…</string>
    <string name="welcome_message">… to Qwotable. In the following, you will see features and instructions of Qwotable.</string>
    <string name="no_ads_title">No ads</string>
    <string name="no_ads_message">Qwotable is an ad-free application for you to relax and focus on Qwotable\'s content!</string>
    <string name="relax_title">Made for you to relax</string>
    <string name="relax_message">Qwotable\'s content are quotes and wisdom. It is made for you to relax and fill your brain with deep sentences.</string>
    <string name="many_qwotables_title">Many Qwotables</string>
    <string name="many_qwotables_message">Qwotable has a lot of quotable stuff that will be updated from time to time. You will recognize it, because the newer the Qwotable, the more on the top it will be!</string>
    <string name="author_pages_title">Author pages</string>
    <string name="author_pages_message">Besides the quotes and wisdom pages, Qwotable offers a page with the quotes and wisdom, based on the author. You simply have to tap on the authors name to get there! Same goes for the found-in.</string>
    <string name="information_title" translatable="false">Information</string>
    <string name="information_message">Get the latest information of Qwotable in the Information page. For that, all you need to do is to swipe down to the bottom of the Homepage and click on "Information"</string>
    <string name="thats_it_title">That\'s it!</string>
    <string name="thats_it_message">With a click on \"start\", the application will parse Qwotable\'s content from the online file on GitHub.</string>
    <string name="slide_button_end">Tap the button below to use Qwotable</string>
    <string name="next_button">Next</string>
    <string name="start_button">Start</string>
    <string name="previous_button">Previous</string>
    <string name="toast_message_information">Getting information, please wait…</string>
    <string name="no_internet_message_information">Connect to the internet to see information</string>
    <string name="error_while_parsing_message_information">"There was an error while getting the current information. I try my best to make it work again asap"</string>
    <string name="toast_message_person">Getting Qwotable, please wait…</string>
    <string name="error_while_parsing_message_person">There was an error while parsing the Qwotable. If it keeps happening, have a look at Information. If there is no post about the issue already, feel free to write an error entry</string>
    <string name="no_internet_error_message_person">Connect to the internet to see Qwotable</string>
    <string name="error_while_parsing_toast_message_person">Unable to get Qwotable currently</string>
    <string name="qwotable_copied_toast_message_person">Qwotable copied to clipboard</string>
    <string name="toast_message_settings">Getting information, please wait…</string>
    <string name="positive_button_text_set">Set</string>
    <string name="neutral_button_text_cancel">Cancel</string>
    <string name="beta_switch_preference_summary_positive">You want to get beta updates</string>
    <string name="beta_switch_preference_summary_negative">You don\'t want to get beta updates</string>
    <string name="qwotable_request_dialog_title">Request a Qwotable</string>
    <string name="qwotable_request_dialog_message">If you think a quote or a wisdom is not in this app currently, but you want it to be here, you can request it.</string>
    <string name="language_preference_summary_language_supported">Current language: English</string>
    <string name="language_preference_summary_language_unsupported" translatable="false">Your system language currently is not officially supported, therefore the language has been set to English</string>
    <string name="google_forms_button" translatable="false">Google Forms</string>
    <string name="github_button" translatable="false">GitHub</string>
    <string name="no_update_toast_message">There is no update available</string>
    <string name="updater_dialog_title" translatable="false">Updater</string>
    <string name="updater_positive_button">Update</string>
    <string name="updater_negative_button">Do it later</string>
    <string name="report_a_bug_dialog_title">Report a bug</string>
    <string name="report_a_bug_dialog_message">I am sorry, if you found a bug. Please send it to me. Make sure to have screenshots (optional, works only in GitHub) and also a step-by-step instruction, so I can reproduce the bug (required).</string>
    <string name="request_a_feature_dialog_title">Request a feature</string>
    <string name="request_a_feature_dialog_message">If you think, you have found a feature that is a must-have for this application, feel free to request it. Who knows, maybe I will add it ;)</string>
    <string name="share_message">Look! I have found an Android application, that has quotes and wisdom!</string>
    <string name="feedback_dialog_title">Feedback</string>
    <string name="feedback_dialog_message">You want to give me feedback to my app? Sure!</string>
    <string name="permission_dialog_title">Permissions of Qwotable</string>
    <string name="permission_dialog_message">Qwotable needs following permissions:  Full internet access: Since Qwotable gets its data from the internet, it is required to check, if an internet connection is available.  Install unknown apps: This is required, so Qwotable is able to install the update.</string>
    <string name="positive_button_okay_text" translatable="false">Okay</string>
    <string name="privacy_dialog_title">Your privacy</string>
    <string name="privacy_dialog_message">Qwotable is a free Android application, made by me, Luca. Qwotable does not collect any data and never will. Every interaction with me is selectable.  I may change the Privacy Policy. Every change is effective immediately. An information of the change of the Privacy Policy can be found on the changelog  Effective January 29, 2023</string>
    <string name="licenses_dialog_title">Licenses</string>
    <string name="licenses_dialog_message">Like other apps, Qwotable uses content that is not mine. In the following, this dialog will tell you about the used content:  Lottie Animations: Lottie animations are the moving pictures that are playing in the presentation-screen and the error screen. The Lottie animations I used are signed under the Lottie Simple License, therefore it is not necessary to give credits to every creator. Though I am thankful for their work, I must confess that I can\'t remember every author. \n\nRikka-Material: \nWith Rikka-material, I mean the content of the settings activity such as the categories and switch.\n\ndwyl:\nThese are Quotes by a GitHub-Project \"quotes\" by the community with the name dwyl. You can find them here: https://github.com/dwyl/start-here</string>
    <string name="wiki_dialog_title" translatable="false">Wiki</string>
    <string name="wiki_dialog_message">Qwotable has its own Wiki-page, created thanks to GitBook. There you will find extra information to Qwotable.</string>
    <string name="wiki_button">To the wiki</string>
    <string name="toast_message_home">Update, please wait…</string>
    <string name="update_card_home_title">A new version of this app is available. Go to Settings, click on Updater and then on Update now, or simply click on this card.</string>
    <string name="update_card_home_beta_title">A newer beta version of this app is available.  Go to Settings, click on Updater and then on Update now, or simply click on this card</string>
    <string name="toast_message_quotes">Getting quotes, please wait…</string>
    <string name="no_internet_error_message_quotes">Connect to the internet to see quotes</string>
    <string name="error_while_parsing_quotes">There was an error while trying to get the quotes. If there is not already an information, feel free to report the issue.</string>
    <string name="error_while_parsing_toast_message_quotes">Unable to get quotes currently</string>
    <string name="quote_copied_toast_message">Quote copied to clipboard</string>
    <string name="toast_message_wisdom">Getting wisdom, please wait…</string>
    <string name="error_while_parsing_wisdom">There was an error while trying to get the wisdom. If there is not already an information, feel free to report the issue.</string>
    <string name="no_internet_error_message_wisdom">Connect to the internet to see wisdom</string>
    <string name="no_internet_error_title">No internet</string>
    <string name="error_while_parsing_title">Oh no!</string>
    <string name="error_button_try_again">Try again</string>
    <string name="copy_button">Copy</string>
    <string name="share_button">Share</string>
    <string name="update_card_update_available">Update available</string>
    <string name="quote_example_quote">Horse: \'Life is difficult, but you are loved.\'</string>
    <string name="quote_example_author" translatable="false">Charlie Mackery</string>
    <string name="quote_example_found_in">The boy, the mole, the fox and the horse</string>
    <string name="quote_definition_title">Quote definition</string>
    <string name="quote_definition_message">Quotes are passages from books, games and movies as well as from songs or public speeches. Usually, the author and the name of the book/movie/song/game is mentioned in the credits. In this app it looks like the example above.</string>
    <string name="quote_definition_message_part_2">Here you can see the quote, the author and (in this case) the movie where the quote can be found.</string>
    <string name="wisdom_example_title">About help</string>
    <string name="wisdom_example_wisdom">Boy: \'What is the bravest thing you\'ve ever said?\' Horse: \'Help. Asking for help isn\'t giving up, it is refusing to give up.\'</string>
    <string name="wisdom_example_author" translatable="false">Charlie Mackery</string>
    <string name="wisdom_example_found_in">The boy, the mole, the fox and the horse</string>
    <string name="wisdom_definition_title">Wisdom definition</string>
    <string name="wisdom_definition_message">In this app, wisdoms are stories/tales that is teaching you of something. It is not always clear, what the wisdom is teaching you. Usually, the author, as well as the book/game/movie is mentioned in the credits. In this app it looks like in the example above.</string>
    <string name="wisdom_definition_message_part_2">Here you can see the wisdom, the author and (in this case) the game where the wisdom can be found.</string>
    <string name="information_card" translatable="false">Information</string>
    <string name="content_description_pages">Presentation image example</string>
    <string name="quotes_item">Quotes</string>
    <string name="home_item" translatable="false">Home</string>
    <string name="wisdom_item">Wisdom</string>
    <string name="settings_item">Settings</string>
    <string name="theme_and_language_preference_category">Language and Theme</string>
    <string name="language_preference_title">Language</string>
    <string name="colors_preference_title">Colors</string>
    <string name="app_news_preference_category">App news</string>
    <string name="updater_preference_title" translatable="false">Updater</string>
    <string name="made_for_you">Made for you</string>
    <string name="made_for_qwotable">Made for Qwotable</string>
    <string name="add_own_quote">My quotes</string>
    <string name="new_qwotable">New Qwotable</string>
    <string name="tap_on_new_qwotable_to_create_a_new_qwotable_m">Tap on \'New Qwotable\' to create a new Qwotable</string>
    <string name="you_have_no_qwotable_saved_here">You have no Qwotable saved here</string>
    <string name="author_hint">Author</string>
    <string name="found_in_hint">Source</string>
</resources>