<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/home_item"
        android:title="@string/home_item"
        android:checkable="true"
        app:showAsAction="ifRoom"
        android:checked="true"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/qwotable_menu_list"
        android:title="@string/made_for_qwotable">
        <menu>

            <item
                android:id="@+id/quote_item"
                android:title="@string/quotes_item"
                android:icon="@drawable/ic_quote"
                android:checkable="true"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/wisdom_item"
                android:title="@string/wisdom_item"
                android:icon="@drawable/ic_wisdom"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/information_item"
                android:title="@string/information_title"
                android:icon="@drawable/ic_info"
                android:checkable="true"
                app:showAsAction="ifRoom"/>

        </menu>
    </item>

    <item
        android:id="@+id/user_menu_list"
        android:title="@string/made_for_you">
        <menu>

            <item
                android:id="@+id/own_quotes_item"
                android:title="@string/add_own_quote"
                android:icon="@drawable/ic_add_own"
                android:checkable="true"
                app:showAsAction="ifRoom"/>

        </menu>
    </item>

</menu>