<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddOwnQuotes">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_own_quotes_rv"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_add"
        app:icon="@drawable/ic_add"
        android:text="@string/new_qwotable"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_gravity="bottom|end"
        />

    <LinearLayout
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_data"
            />

        <TextView
            android:id="@+id/titleError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:gravity="center"
            android:text="@string/you_have_no_qwotable_saved_here"/>

        <TextView
            android:id="@+id/messageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tap_on_new_qwotable_to_create_a_new_qwotable_m"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>